--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <a></a>
+  <a>href="https://www.google.com"</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
