--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <a href ="https://www.google.com"> </a>
 
-  <a href="about.html" target="_blank">About Page</a>
+  <a href="about.html" >About Page</a>
 
-  <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="_blank">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
   </a>
 
